[gd_scene load_steps=5 format=3 uid="uid://drraxvfcsxsu3"]

[ext_resource type="Script" path="res://UI/HUD.gd" id="1_6f2rr"]
[ext_resource type="Texture2D" uid="uid://dwpijd8v0axs8" path="res://Assets/Images/UI/whitesquare.png" id="2_ir1nt"]
[ext_resource type="PackedScene" uid="uid://sbl4rscivr8g" path="res://UI/settings_container.tscn" id="3_0ciyq"]

[sub_resource type="GDScript" id="GDScript_ehaam"]
script/source = "@tool
extends CenterContainer
@export var RETACLE_LINES : Array[Line2D]
@export var PLAYER_CONTROLLER : CharacterBody3D
@export var RETACLE_SPEED := 0.25
@export var RETACLE_DISTANCE := 2.0
@export var RETACLE_DOT_RADUS := 1.0
@export var RETACLE_DOT_COLLOR := Color.WHITE

func _ready():
	queue_redraw()
func _process(delta):
	adjust_reticle_lines()
func _draw():
	draw_circle(Vector2.ZERO,RETACLE_DOT_RADUS,RETACLE_DOT_COLLOR)

func adjust_reticle_lines():
	var vel = PLAYER_CONTROLLER.get_real_velocity()
	var origin = Vector3.ZERO
	var pos = Vector2.ZERO
	var speed = origin.distance_to(vel)
	RETACLE_LINES[0].position = lerp(RETACLE_LINES[0].position,pos + Vector2(0,-speed * RETACLE_DISTANCE),RETACLE_SPEED)
	RETACLE_LINES[1].position = lerp(RETACLE_LINES[1].position,pos + Vector2(speed * RETACLE_DISTANCE,0),RETACLE_SPEED)
	RETACLE_LINES[2].position = lerp(RETACLE_LINES[2].position,pos + Vector2(0,speed * RETACLE_DISTANCE),RETACLE_SPEED)
	RETACLE_LINES[3].position = lerp(RETACLE_LINES[3].position,pos + Vector2(-speed * RETACLE_DISTANCE,0),RETACLE_SPEED)
	
"

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_6f2rr")

[node name="HealthBar" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -551.0
grow_horizontal = 2
grow_vertical = 2
value = 5.0
rounded = true
texture_progress = ExtResource("2_ir1nt")

[node name="Label" type="Label" parent="HealthBar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "5"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="SettingsContainer" parent="." instance=ExtResource("3_0ciyq")]
visible = false
layout_mode = 1
offset_top = 25.0

[node name="Redicle" type="CenterContainer" parent="." node_paths=PackedStringArray("RETACLE_LINES")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = SubResource("GDScript_ehaam")
RETACLE_LINES = [NodePath("top"), NodePath("right"), NodePath("bottom"), NodePath("left")]

[node name="top" type="Line2D" parent="Redicle"]
points = PackedVector2Array(0, -5, 0, -15)
width = 2.0

[node name="right" type="Line2D" parent="Redicle"]
points = PackedVector2Array(5, 0, 15, 0)
width = 2.0

[node name="bottom" type="Line2D" parent="Redicle"]
points = PackedVector2Array(0, 5, 0, 15)
width = 2.0

[node name="left" type="Line2D" parent="Redicle"]
points = PackedVector2Array(-5, 0, -15, 0)
width = 2.0

[connection signal="exit" from="SettingsContainer" to="." method="_on_settings_container_exit"]
